fix(!): my fucking hatred for npm
WHY

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "files": [
     "index.js",
     "/agent/inject.js",
-    "/agent/keybagd.js",
+    "/agent/SpringBoard.js",
     "/agent/launchd.js",
     "/bin",
     "/lib/"
